tests/ui/type/type-check/cannot_infer_local_or_vec.stderr
error[E0282]: type annotations needed
  --> $DIR/cannot_infer_local_or_vec.rs:2:13
   |
LL |     let x = vec![];
   |             ^^^^^^ cannot infer type
   |
   = note: this error originates in the macro `vec` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
